[package]
name = "rust-data-engineering"
version = "0.1.0"
edition = "2024"
authors = [
    "Rahul Singhai <singrahu@gmail.com>",
]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
description = ""
repository = "https://github.com/rahulsinghai/rust-data-engineering"
documentation = "https://docs.rs/rust-data-engineering/"
keywords = []
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "rahulsinghai/rust-data-engineering" }
is-it-maintained-open-issues = { repository = "rahulsinghai/rust-data-engineering" }

maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0.96"
clap = "4.5.31"
thiserror = "2.0.11"

[build-dependencies]
clap = "4.5.31"

[features]
default     = ["std"]
std         = [] # support for no_std in a backwards-compatible way
debug       = [] # Enables debug messages
doc         = [] # All the features which add to documentation

[profile.test]
opt-level = 1

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["doc"]
targets = ["x86_64-unknown-linux-gnu"]
